# nov25cmlops_rakuten

./: .dockerignore  .gitignore  Makefile  Makefile_2.txt  Notes.md  README.md  docker-compose.yml  dvc.yaml  dvc_lineage.json  mlflow_data_info.json  pyproject.toml  requirements-dev.txt  requirements.txt
.dvc/: config
api/: X_test_update.csv  X_train.csv  Y_train.csv  api-jt-2.py  api-jt.py  api-mlflow.py  api_main.py  main.py  new_main.py  requests.txt
data/interim/: .gitignore  rakuten_train_current.csv.dvc  rakuten_trian_current.csv.dvc
data/processed/: .gitignore
data/raw/: .gitignore  product_categories.csv.dvc
data/raw/rakuten/: .gitignore
deployments/certs/: nginx.crt
deployments/nginx/: .htpasswd  nginx.conf
deployments/nginx/certs/: nginx.key
deployments/prometheus/: prometheus.yml
docker/api-inference/: Dockerfile
docker/api-service/: Dockerfile
docker/api-train/: Dockerfile
docs/: mkdocs.yml
docs/docs/: index.md
mlops_rakuten/: __init__.py  api.py  config.py  config.yml  config_manager.py  dataset.py  entities.py  features.py  main.py  main_old.py  plots.py  utils.py
mlops_rakuten/auth/: auth_simple.py  hash_password.py  users.json
mlops_rakuten/config/: config.yml  config_manager.py  constants.py  entities.py
mlops_rakuten/modeling/: data_ingestion.py  data_preprocessing.py  model_trainer.py  predict.py  train.py
mlops_rakuten/modules/: data_ingestion.py  data_preprocessing.py  data_seeding.py  data_transformation.py  data_versioning.py  model_evaluation.py  model_trainer.py  model_trainer_dev.py  prediction.py
mlops_rakuten/pipelines/: data_ingestion.py  data_preprocessing.py  data_seeding.py  data_transformation.py  data_versioning.py  model_evaluation.py  model_trainer.py  prediction.py
mlops_rakuten/services/: gateway_app.py  ingest_app.py  predict_app.py  schemas.py  train_app.py
mlruns/0/: meta.yaml
mlruns/190155843876560128/: meta.yaml
mlruns/190155843876560128/000b0550305e438bb4391ed9b8d4bccc/: meta.yaml
mlruns/190155843876560128/0b33034f4edd4df9bf3e3a8f171370a6/: meta.yaml
mlruns/190155843876560128/4028188ca5cc4f6499a2614ff130c657/: meta.yaml
mlruns/190155843876560128/5066f826a5714c239fad891a33b86188/: meta.yaml
mlruns/190155843876560128/535cde4b222e4af6a039de9b24d70e8f/: meta.yaml
mlruns/190155843876560128/559efc5d65854c28a680ee885dc90017/: meta.yaml
mlruns/190155843876560128/5d7b1c305ea641e3ab907410e3807664/: meta.yaml
mlruns/190155843876560128/83e557bc2c1641f7a43c78383954f12c/: meta.yaml
mlruns/190155843876560128/9382e96810fd42748431f55164d7ca0c/: meta.yaml
mlruns/190155843876560128/9c1d2624417c4e84accc28e8860c0480/: meta.yaml
mlruns/190155843876560128/9fb9d10f22f44581bc53f3edcb561066/: meta.yaml
mlruns/190155843876560128/a000170529474bdda25ea58cdc9ec4e1/: meta.yaml
mlruns/190155843876560128/c6a51c9ceae44bf0b88592af74db4b82/: meta.yaml
mlruns/190155843876560128/c9cc13e99c2f4fcbb233f4599412a5b5/: meta.yaml
mlruns/190155843876560128/d0612cd9b5c540acbe04da6f41a3df67/: meta.yaml
mlruns/190155843876560128/d5fe350a22ba4385ac8b30ca54589008/: meta.yaml
mlruns/641549194285215590/: meta.yaml
mlruns/models/Model 0/: meta.yaml
models/: classification_report_train.txt  metrics_train.json  model_config.json
models/2025-12-14T04-33-54/: metrics_train.json  model_config.json
models/2025-12-14T17-36-20/: classification_report_train.txt  model_config.json
notebooks/: 01_exploration.ipynb
predict/: load_from_mlflow_model.py
reports/: classification_report_val.txt  confusion_matrix_val.npy  metrics_val.json
reports/2025-12-14T17-36-27/: classification_report_val.txt  confusion_matrix_val.npy  metrics_val.json
src/: 06_load_from_mlflow_model.py  MLproject  experiment.py  experiment_02.py  get_mlflow_env.py  train_model.py
tests/: data_preprocessing.py  test_api.py  test_data_ingestion.py  test_data_preprocessing.py  test_data_transformation.py  test_model_evaluation.py  test_model_trainer.py  test_pipelines.py  test_prediction_pipeline.py
train/: MLproject  exec_MLproject.txt  experiment_00.py  experiment_01.py  get_mlflow_env.py  train_model.py
(+182 files in other folders)
