[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_rakuten"
version = "0.0.1"
description = "Product type classification for Rakuten France"
authors = [
  { name = "C. Fabre J. Therier S. Beau" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"
dependencies = [
  # Env
  "python-dotenv>=1.0.1",

  # API
  "fastapi>=0.124.2",
  "uvicorn>=0.38.0",
  "python-multipart>=0.0.20",

  # Auth / Security
  "python-jose[cryptography]>=3.5.0",
  "passlib>=1.7.4",

  # Config
  "pyyaml>=6.0.3",
  "python-box>=7.3.2",

  # Data / ML
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",

  # Utils / CLI / logs
  "loguru>=0.7.2",
  "tqdm>=4.66.0",
  "typer>=0.12.0",

  # Monitoring (pour Prometheus/Grafana)
  "prometheus-fastapi-instrumentator>=7.0.0",
]


[tool.ruff]
line-length = 99
src = ["mlops_rakuten"]
include = ["pyproject.toml", "mlops_rakuten/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops_rakuten"]
force-sort-within-sections = true

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:.*'crypt' is deprecated.*:DeprecationWarning",
]
