[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_rakuten"
version = "0.0.1"
description = "Product type classification for Rakuten France"
authors = [
  { name = "C. Fabre J. Therier S. Beau" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.12.0"
dependencies = [
    # Core API
    "fastapi>=0.124.0",
    "uvicorn[standard]==0.27.1",
    "python-multipart[standard]>=0.0.20",
    # Configuration
    "python-dotenv==1.0.1",
    "python-box>=7.3.2",
    # Data Science
    "pandas[standard]>=2.3.3",
    "scikit-learn[standard]>=1.8.0",
    "scipy[standard]>=1.16.3",
    # AWS
    "boto3==1.34.46",
    "botocore==1.34.46",
    "s3transfer==0.10.1",
    # CLI
    "typer[standard]>=0.20.0",
    "click==8.1.6",
    "rich==13.7.1",
    "loguru[standard]>=0.7.3",
    # Web/HTTP
    "requests[standard]==2.31.0",
    "h11==0.14.0",
    "urllib3==2.0.7",
    "certifi==2023.11.17",
    # Templating
    "jinja2==3.1.2",
    "markupsafe==2.1.5",
    # Data formats
    "pyyaml==6.0.1",
    "jsonschema==4.10.3",
    # Testing
    "pytest[standard]==7.4.4",
    # Utilities
    "python-dateutil==2.8.2",
    "pytz==2024.1",
    "attrs==23.2.0",
    "packaging==24.0",
    "typing-extensions==4.10.0",
    # Security
    "cryptography==41.0.7",
    "bcrypt==3.2.2",
    "pyjwt==2.7.0",
    "mlflow>=2.16.0,<3.0",
]

[tool.ruff]
line-length = 99
src = ["mlops_rakuten"]
include = ["pyproject.toml", "mlops_rakuten/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops_rakuten"]
force-sort-within-sections = true
